--- a/user3/slo.yaml
+++ b/user3/slo.yaml
@@ -16,6 +16,17 @@ objectives:
             - <50
       weight: 1
       key_sli: false
+    - sli: service_rt
+      displayName: ""
+      pass:
+        - criteria:
+            - <2000
+            - <+10%
+      warning:
+        - criteria:
+            - <5000
+      weight: 1
+      key_sli: false
 total_score:
     pass: 90%
     warning: 75%
