--- a/user1/dynatrace/sli.yaml
+++ b/user1/dynatrace/sli.yaml
@@ -1,3 +1,3 @@
 spec_version: 0.1.4
 indicators:
-    service_cpu: metricSelector=builtin:host.cpu.idle:splitBy():auto:names
+    service_cpu: metricSelector=builtin:host.cpu.usage:splitBy():auto:names
