--- a/user11/slo.yaml
+++ b/user11/slo.yaml
@@ -16,6 +16,28 @@ objectives:
             - <50
       weight: 1
       key_sli: false
+    - sli: kpi_rt
+      displayName: ""
+      pass:
+        - criteria:
+            - <2000
+            - <=+15%
+      warning:
+        - criteria:
+            - <=5000
+      weight: 1
+      key_sli: true
+    - sli: kpi_rt2
+      displayName: ""
+      pass:
+        - criteria:
+            - <2000
+            - <=+10%
+      warning:
+        - criteria:
+            - <=5000
+      weight: 1
+      key_sli: true
 total_score:
     pass: 90%
     warning: 75%
