--- a/webhook/webhook.yaml
+++ b/webhook/webhook.yaml
@@ -11,3 +11,10 @@ spec:
       subscriptionID: 6e7bccc8-2237-4bf0-8f74-ae36a53d255b
       sendFinished: false
       sendStarted: false
+    - type: sh.keptn.event.build.triggered
+      requests:
+        - >-
+          curl --request POST http://dynatrace:1197edc464a6c0b7aa5e6d0f72039229db@jenkins.54.242.152.223.nip.io/job/demo-quality-gates-jenkins/job/1.%20Build/buildWithParameters?build=2
+      subscriptionID: 58c0792b-76a3-4212-8cd0-4e46a117e562
+      sendFinished: true
+      sendStarted: true
