--- a/sns/slo.yaml
+++ b/sns/slo.yaml
@@ -6,118 +6,144 @@ comparison:
     number_of_comparison_results: 1
     aggregate_function: avg
 objectives:
-    - sli: graph
-      displayName: Graph
-      pass: []
-      warning: []
+    - sli: service_rt_requests_to_public_networks
+      displayName: Service Resp (Requests to public networks)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_requests_to_public_networks
-      displayName: Graph (Requests to public networks)
-      pass: []
-      warning: []
+    - sli: service_rt_jnlp_jenkins
+      displayName: Service Resp (jnlp.jenkins)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_jnlp_jenkins
-      displayName: Graph (jnlp.jenkins)
-      pass: []
-      warning: []
+    - sli: service_rt_simplenodeservice_simplenode-jenkins-staging
+      displayName: Service Resp (simplenodeservice.simplenode-jenkins-staging)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_simplenodeservice_simplenode-jenkins-staging
-      displayName: Graph (simplenodeservice.simplenode-jenkins-staging)
-      pass: []
-      warning: []
+    - sli: service_rt_jnlp_jenkins
+      displayName: Service Resp (jnlp.jenkins)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_dashboard_ace
-      displayName: Graph (dashboard.ace)
-      pass: []
-      warning: []
+    - sli: service_rt_dashboard_ace
+      displayName: Service Resp (dashboard.ace)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_gitaly_gitlab
-      displayName: Graph (gitaly.gitlab)
-      pass: []
-      warning: []
+    - sli: service_rt_jnlp_jenkins
+      displayName: Service Resp (jnlp.jenkins)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_requests_to_unmonitored_hosts
-      displayName: Graph (Requests to unmonitored hosts)
-      pass: []
-      warning: []
+    - sli: service_rt_requests_on_localhost:8080
+      displayName: Service Resp (Requests on localhost:8080)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_requests_on_localhost:8080
-      displayName: Graph (Requests on localhost:8080)
-      pass: []
-      warning: []
+    - sli: service_rt_gitlab-workhorse_gitlab
+      displayName: Service Resp (gitlab-workhorse.gitlab)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_jnlp_jenkins
-      displayName: Graph (jnlp.jenkins)
-      pass: []
-      warning: []
+    - sli: service_rt_requests_to_unmonitored_hosts
+      displayName: Service Resp (Requests to unmonitored hosts)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_jnlp_jenkins
-      displayName: Graph (jnlp.jenkins)
-      pass: []
-      warning: []
+    - sli: service_rt_jenkins_jenkins
+      displayName: Service Resp (jenkins.jenkins)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_gitlab-workhorse_gitlab
-      displayName: Graph (gitlab-workhorse.gitlab)
-      pass: []
-      warning: []
+    - sli: service_rt_opentelemetry-collector_otel
+      displayName: Service Resp (opentelemetry-collector.otel)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_jenkins_jenkins
-      displayName: Graph (jenkins.jenkins)
-      pass: []
-      warning: []
+    - sli: service_rt_simplenodeservice_simplenode-jenkins-production
+      displayName: Service Resp (simplenodeservice.simplenode-jenkins-production)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_gitaly_gitlab
-      displayName: Graph (gitaly.gitlab)
-      pass: []
-      warning: []
+    - sli: service_rt_jenkins_jenkins
+      displayName: Service Resp (jenkins.jenkins)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
-    - sli: graph_opentelemetry-collector_otel
-      displayName: Graph (opentelemetry-collector.otel)
-      pass: []
-      warning: []
-      weight: 1
-      key_sli: false
-    - sli: graph_jenkins_jenkins
-      displayName: Graph (jenkins.jenkins)
-      pass: []
-      warning: []
-      weight: 1
-      key_sli: false
-    - sli: graph_simplenodeservice_simplenode-jenkins-production
-      displayName: Graph (simplenodeservice.simplenode-jenkins-production)
-      pass: []
-      warning: []
-      weight: 1
-      key_sli: false
-    - sli: graph_gitaly_gitlab
-      displayName: Graph (gitaly.gitlab)
-      pass: []
-      warning: []
-      weight: 1
-      key_sli: false
-    - sli: graph_gitaly_gitlab
-      displayName: Graph (gitaly.gitlab)
-      pass: []
-      warning: []
-      weight: 1
-      key_sli: false
-    - sli: graph_gitaly_gitlab
-      displayName: Graph (gitaly.gitlab)
-      pass: []
-      warning: []
+    - sli: service_rt_gitaly_gitlab
+      displayName: Service Resp (gitaly.gitlab)
+      pass:
+        - criteria:
+            - <20
+      warning:
+        - criteria:
+            - <50
       weight: 1
       key_sli: false
 total_score:
