--- a/snsnew/slo.yaml
+++ b/snsnew/slo.yaml
@@ -6,138 +6,8 @@ comparison:
     number_of_comparison_results: 1
     aggregate_function: avg
 objectives:
-    - sli: service_rt_requests_to_public_networks
-      displayName: Service Resp (Requests to public networks)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_jnlp_jenkins
-      displayName: Service Resp (jnlp.jenkins)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_simplenodeservice_simplenode-jenkins-staging
-      displayName: Service Resp (simplenodeservice.simplenode-jenkins-staging)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_jnlp_jenkins
-      displayName: Service Resp (jnlp.jenkins)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_dashboard_ace
-      displayName: Service Resp (dashboard.ace)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_jnlp_jenkins
-      displayName: Service Resp (jnlp.jenkins)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_requests_on_localhost:8080
-      displayName: Service Resp (Requests on localhost:8080)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_gitlab-workhorse_gitlab
-      displayName: Service Resp (gitlab-workhorse.gitlab)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_requests_to_unmonitored_hosts
-      displayName: Service Resp (Requests to unmonitored hosts)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_jenkins_jenkins
-      displayName: Service Resp (jenkins.jenkins)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_opentelemetry-collector_otel
-      displayName: Service Resp (opentelemetry-collector.otel)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_simplenodeservice_simplenode-jenkins-production
-      displayName: Service Resp (simplenodeservice.simplenode-jenkins-production)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_jenkins_jenkins
-      displayName: Service Resp (jenkins.jenkins)
-      pass:
-        - criteria:
-            - <20
-      warning:
-        - criteria:
-            - <50
-      weight: 1
-      key_sli: false
-    - sli: service_rt_gitaly_gitlab
-      displayName: Service Resp (gitaly.gitlab)
+    - sli: service_rt
+      displayName: Service Resp
       pass:
         - criteria:
             - <20
