--- a/snsnew/slo.yaml
+++ b/snsnew/slo.yaml
@@ -16,6 +16,16 @@ objectives:
             - <50
       weight: 1
       key_sli: false
+    - sli: availability_simplenodeservice
+      displayName: ""
+      pass:
+        - criteria:
+            - '>=99.990000'
+      warning:
+        - criteria:
+            - '>=99.980000'
+      weight: 1
+      key_sli: false
 total_score:
     pass: 90%
     warning: 75%
